# sandbox

./: .bazelproject  .gitignore  CMakeLists.txt  README.md  WORKSPACE  dependencies.yaml
algos/: README.md  clibrary.c  ctypes_basics.py  test.py
algos/sliding_window/: AverageOfSubarrayOfSizeK.java  LongestSubstringKDistinct.java  MaxSumSubArrayOfSizeK.java  MinSizeSubArraySum.java  contains_permutation.py  find_anagrams.py  fruits_into_baskets.py  length_of_longest_subarray.py  length_of_longest_substring.py  min_length_substring.py  non_repeat_substring.py  word_concatenation.py
algos/two_pointers/: remove_duplicates.py  remove_key.py  sorted_squares.py  target_sum_pair.py  triple_sum.py
aoc/2021/day1/: day1.py
aoc/2021/day10/: day10.py
aoc/2021/day11/: day11.py
aoc/2021/day12/: day12.py
aoc/2021/day13/: day13.py
aoc/2021/day14/: day14.py
aoc/2021/day15/: day15.py
aoc/2021/day16/: day16.py
aoc/2021/day17/: day17.py
aoc/2021/day18/: day18.py
aoc/2021/day2/: day2.py
aoc/2021/day3/: day3.py
aoc/2021/day4/: day4.py
aoc/2021/day5/: day5.py
aoc/2021/day6/: day6.py
aoc/2021/day7/: day7.py
aoc/2021/day8/: day8.py
aoc/2021/day9/: day9.py
aoc/2023/: answers.ipynb
cpp/: Makefile  foo.c
exercism/awk/hello-world/.exercism/: metadata.json
exercism/awk/reverse-string/: reverse-string.awk  test-reverse-string.bats
exercism/awk/reverse-string/.exercism/: metadata.json
exercism/awk/two-fer/: test-two-fer.bats  two-fer.awk
exercism/awk/two-fer/.exercism/: metadata.json
haskell/: README.txt  sandbox.hs
java-sandbox/: BUILD.bazel
java-sandbox/src/main/java/com/algorithms/sliding_window/: AverageOfSubarrayOfSizeK.java  BUILD.bazel  MaxSumSubArrayOfSizeK.java
java-sandbox/src/main/java/com/sandbox/: BUILD.bazel  SandboxJava.java  Threading.java
java-sandbox/src/main/java/com/sid/lucenesearcher/: BUILD.bazel  SandboxSearcher.java
js/: package-lock.json  test.js
lucene-playground/lucene-8.7.0/: .gitignore
lucene-playground/lucene-8.7.0/docs/changes/: Changes.html
ml-explore/notebooks/: Bayes_basics.ipynb  KMeans.ipynb  Neural Style Transfer.ipynb  classify_text_with_bert.ipynb  keras101.ipynb  makemore - part 1.ipynb  makemore - part 2.ipynb  makemore_main.ipynb  micrograd_basics.ipynb  requirements.in  srush_tensors.ipynb  text_generation.ipynb  torch_101.ipynb
php-sandbox/: sandbox.php
play/cpp-sandbox/: Makefile  smartpointers.cpp
play/nvim-sandbox/plugins/stackmap.nvim/lua/stackmap/: init.lua
play/nvim-sandbox/plugins/stackmap.nvim/plugin/: example.lua
play/rust-sandbox/: Cargo.toml
play/zig-sandbox/: main.zig
plotting/python/: .env  Playground.ipynb  basics.ipynb  pyplot.py  test.py
prometheus-sandbox/: README.md
rust-sandbox/: Cargo.toml
rust-sandbox/src/: main.rs  ownership.rs
scala-sandbox/: BUILD.bazel  build.sbt
scala-sandbox/scripts/: kickaround.sc  scalatest.sc  test.sc  ttfi.sc
scala-sandbox/scripts/part1/: Backoff.sc  FileWriter.sc  FlexibleFizzBuzz.sc  Parser.sc  RecursiveMessages.sc  RenderSudoku.sc  isValidSudoku.sc
scala-sandbox/src/main/resources/: BUILD.bazel  application.conf  base.conf  base2.conf
scala-sandbox/src/main/scala/com/handsonscala/: BUILD.bazel
scala-sandbox/src/main/scala/com/sandbox/: BUILD.bazel  FizzBuzz.scala  HoconTest.scala  ImplicitsSandbox.scala  Sandbox.scala  SandboxScala.scala  test.conf
scala-sandbox/src/main/scala/examples/: Hello.scala
stats/: .Rhistory  bayes_introP.ipynb
