java_library(
    name = "sandbox",
    srcs = glob(["SandboxJava.java"]),
    visibility = ["//java-sandbox:__subpackages__"],
    deps = [],
)

java_binary(
    name = "threads",
    srcs = ["Threading.java"],
    main_class = "com.sandbox.Threading",
    deps = [
        "@maven//:junit_junit",
    ],
)
