load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")

#scala_binary(
#    name = "scala-sandbox",
#    main_class = "com.sandbox.SandboxScala",
#    scalac_jvm_flags = ["-Ylog-classpath"],
#    deps = [
#        "//scala-sandbox/src/main/scala/com/sandbox",
#    ],
#)
