load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")

scala_library(
    name = "sandbox",
    srcs = glob(["*.scala"]),
    resources = ["//scala-sandbox/src/main/resources:config"],
    visibility = ["//scala-sandbox:__subpackages__"],
    deps = [
        "@maven//:com_twitter_finatra_http_2_12",
    ],
)
