load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")

scala_library(
    name = "sandbox",
    srcs = glob(["*.scala"]),
    resources = ["//scala-sandbox/src/main/resources:config"],
    visibility = ["//scala-sandbox:__subpackages__"],
    deps = [
        "@maven//:org_typelevel_cats_core_2_12",
        "@maven//:org_typelevel_cats_effect_2_12",
    ],
)
